<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pantallas.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rango"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editRango"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#696969"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tamano"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editTamano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#696969"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <RadioGroup
            android:id="@+id/gruporb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/Ordenar"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/radioButton1"
                android:layout_alignParentRight="true"
                android:text="@string/Desordenar"
                android:textColor="#ffffff" />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_weight="0.02"
        android:background="#696969"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="generaNumeros"
        android:text="@string/Random" />

</LinearLayout>